
- 2.10 released -

Support the new sysinst root password and entropy configuration user
interface introduced on source date 2022.04.21.17.30.15.

Fix stray quotes in the anita --help output.

When choosing to overwrite a non-NetBSD partition, handle yes/no
choices presented in either order.

Define a scratch disk for macppc (wd1c) so that ATF test results can
be exported to the host.

- 2.9 released -

Support the new "gpufw" set.

Actually reduce the default test timeout to 1 hour as documented in
version 2.5 when anita is invoked as a program rather than as a
library.

Log a message to the structured log file on timeout so that the time
when the timeout occurred can be determined from the message timestamp.

Define a scratch disk for alpha (wd1c) so that ATF test results can
be exported to the host.

In addition to the plain-text ATF test report printed to the console
as the tests progress, also store a clean copy without other console
output in test.txt and export it to the host.  Suggested by
Greg Troxel.

Fix failure to destroy the Xen DomU used by the installation stage
before trying to create the one for the boot stage when running
under Python 3.

Fix failure to log in after reboot when running "anita test" on a
self-resizing image without running a separate "anita install" first.
From Joerg Sonnenberger.

Support coypu's proposed sysinst entropy patch.

Remove extra newline in reponse to entropy prompt.

- 2.8 released -

Preemeptively support sysinst requesting entropy as a single line.

Fix bug in 2.7 that caused the provision of entropy to the installer
to fail when running under Python 3.

Omit ",cdrom" when passing a CD-ROM device to a Xen PV domain because
doing so will cause NetBSD/Xen to ignore device since xenbus_probe.c
1.51.

- 2.7 released -

Fix bug in 2.6 that caused the provision of entropy to the installer
to fail when running under Python 2.

- 2.6 released -

Support upcoming sysinst changes to support interactive input of
entropy.
